# cosmocopia

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
contracts/: Cargo.toml
contracts/planet/: Cargo.toml
contracts/planet/src/: dna.rs  drand.rs  galaxy.rs  lib.rs  stats.rs  test.rs
contracts/planet/test_snapshots/test/: approve_works_for_non_soulbound.1.json  audit_m1_same_round_siblings_have_distinct_latent_trait_bytes.1.json  audit_m3_legacy_parent_contributes_visible_d_not_zero.1.json  burn_5_xlm_distribution_5_xlm.1.json  care_changes_vitals.1.json  care_rejects_non_owner.1.json  civ_tier_class_aware_hollow_thrives_on_low_biomass.1.json  civ_tier_ratchets_up_on_care.1.json  civ_tier_starts_at_zero_for_genesis.1.json  civ_tier_view_falls_back_to_zero_for_legacy_planets.1.json  claim_first_light_charges_10_xlm.1.json  claim_first_light_one_shot_per_address.1.json  commit_genesis_rejects_non_admin.1.json  commitment_storage_round_trips.1.json  conjoin_cooldown_blocks_then_clears.1.json  conjoin_different_pair_after_spent_pair_succeeds.1.json  conjoin_first_time_pair_succeeds_and_marks_spent.1.json  conjoin_produces_child_with_lineage_signature.1.json  conjoin_rejects_recipient_not_parent_owner.1.json  conjoin_rejects_unhealthy_parent.1.json  conjoin_same_pair_twice_rejects_at_commit.1.json  conjoin_same_pair_twice_rejects_at_commit_reverse_order.1.json  conjoin_same_parent_fails.1.json  conjoin_via_full_flow_writes_latent_and_dna.1.json  conjoin_writes_child_latent.1.json  cooldown_of_view.1.json  first_light_coord_unique.1.json  (+47 more)
(+57 files in other folders)
