[workspace]
resolver = "2"
members = ["planet"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cosmocopia/cosmocopia"
authors = ["Cosmocopia"]

[workspace.dependencies]
soroban-sdk = "=25.3.1"
stellar-tokens = "=0.7.1"
stellar-access = "=0.7.1"
stellar-contract-utils = "=0.7.1"
stellar-macros = "=0.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
